--- a/blogfrontend/src/App.css
+++ b/blogfrontend/src/App.css
@@ -2,9 +2,9 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     margin: 0;
-}
-
-button {
+  }
+  
+  button {
     padding: 16px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
@@ -12,81 +12,72 @@ button {
     color: white;
     border-radius: 8px;
     cursor: pointer;
-}
-
-.clow {
-    position: relative;
-    top: 2.6em;
-    text-decoration: underline;
-}
-
-h3,
-h4 {
-    margin-bottom: 1em;
-}
-
-nav {
+  }
+  
+  h3, h4 {
+    margin-bottom: 0;
+  }
+  
+  nav {
     border-bottom: 4px solid black;
     text-align: center;
-    /* position: relative;
+    position: fixed;
     top: 0;
-    left: 0; */
     width: 100%;
-    background: lightgray;
-}
-
-nav ul {
+    background: white;
+  }
+  
+  nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-}
-
-nav li {
+  }
+  
+  nav li {
     display: inline-block;
-    padding-top: 16px;
-    padding-bottom: 16px;
-}
-
-nav a {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+  
+  nav a {
     text-decoration: none;
     color: black;
     font-weight: bold;
-    padding: 16px 32px;
-}
-
-nav a:hover {
+    padding: 24px 32px;
+  }
+  
+  nav a:hover {
     background: black;
     color: white;
-}
-
-#page-body {
+  }
+  
+  #page-body {
     max-width: 700px;
     margin: auto;
-    padding-top: 64px;
-}
-
-.article-list-item {
+    padding-top: 72px;
+  }
+  
+  .article-list-item {
     text-decoration: none;
     color: black;
     padding: 16px 0 0 0;
-}
-
-.article-list-item p {
+  }
+  
+  .article-list-item p {
     padding-bottom: 32px;
     border-bottom: 2px solid black;
-}
-
-#add-comment-form {
+  }
+  
+  #add-comment-form {
     border-bottom: 2px solid black;
     padding: 16px;
-}
-
-#add-comment-form h3 {
+  }
+  
+  #add-comment-form h3 {
     margin-bottom: 16px;
-}
-
-#add-comment-form input,
-textarea {
+  }
+  
+  input, textarea {
     display: block;
     width: 300px;
     padding: 8px;
@@ -95,27 +86,30 @@ textarea {
     font-size: 18px;
     border: 2px solid black;
     margin-bottom: 16px;
-}
-
-#add-comment-form button {
-    width: 11em;
-    border-radius: 1.6em;
-}
-
-#upvotes-section button,
-h5 {
-    font-size: .9em;
+  }
+  
+  .error {
+    padding: 8px;
+    border-radius: 4px;
+    background-color: pink;
+  }
+  
+  #add-comment-form button {
+    width: 320px;
+  }
+  
+  #upvotes-section button, p {
     display: inline-block;
-    /* float: right; */
     margin-right: 16px;
-    border-radius: 1.6em;
-}
-
-p {
-    margin-right: 16px;
-}
-
-.comment {
+  }
+  
+  .comment {
     border-bottom: 2px solid black;
     padding: 16px;
-}
+  }
+  
+  .nav-right {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+  }
